Prevent text wrapping of archive action.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2193,7 +2193,6 @@ a.active:hover {
 /* The archive buttons */
 
 #history .archive_action {
-  width: 10%;
   text-align: right;
   padding-right: 10px;
 }
